docs: LOCAL-nta project guide and implemented status